--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -40,6 +40,9 @@
     <div id="header-group">
       {% sections 'header-group' %}
     </div>
+   <h1>Hi bitch </h1>
+
+
 
     <script
       src="{{ 'critical.js' | asset_url }}"
